--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.1.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.0"
   }
 }
