--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "cpf-cnpj-validator": "^1.0.3",
+    "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.0"
+    "@types/leaflet": "^1.9.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
