--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "cpf-cnpj-validator": "^1.0.3",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
+    "leaflet-draw": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-leaflet": "^4.1.0",
+    "react-leaflet-draw": "^0.20.4",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
